# ros_names_and_remapping

./: CMakeLists.txt  package.xml
launch/: multiple_nodes.launch  multiple_remapping.launch  multiple_with_include.launch  single_node.launch  single_node_with_params.launch  single_node_with_params_and_args.launch
src/: fake_robot.py
